# InsightMail-Pro

./: .gitignore  README.md
ai/: .env.example  .gitignore  pyproject.toml
ai/app/: main.py
ai/app/api/: endpoints.py
ai/app/core/: config.py
ai/app/costing/: cost_manager.py  model_prices.json
ai/app/models/: analysis.py
ai/app/services/: gemini_service.py
ai/costing/: model_prices.json
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/controllers/: analyze.controller.js  auth.controller.js  history.controller.js  usage.controller.js
backend/src/middleware/: auth.js
backend/src/models/: Activity.js  UsageEntry.js  User.js
backend/src/routes/: analyze.routes.js  auth.routes.js  history.routes.js  usage.routes.js
backend/src/utils/: cookies.js  costing.js  db.js
backend/src/validators/: auth.validators.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AppMenu.jsx  AppShell.jsx  FilePicker.jsx  HeaderBar.jsx  MenuDropdown.jsx  Modal.jsx  Select.jsx  ShimmerBlock.jsx  SidePanel.jsx  Sidebar.jsx  StatCard.jsx  Toast.jsx  TopBar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useTheme.js  useToast.js
frontend/src/pages/: AuthLayout.jsx  Dashboard.jsx  History.jsx  Login.jsx  Protected.jsx  Signup.jsx  Usage.jsx
